package src.Payment;

public interface SalaryDeduction {
    /**
     * The deductFromSalary function deducts a specified amount from a person's salary.
     * 
     * @param amount The amount parameter in the deductFromSalary function is a double data type, which
     * means it can store decimal numbers. It represents the amount of money that will be deducted from
     * a person's salary.
     */
    void deductFromSalary(double amount);
}
