package src.Vehicle;

public class Bicycle extends Vehicle {
    private Double basketCapacity;
    
    public Double getBasketCapacity() {
        return basketCapacity;
    }

    public void setBasketCapacity(Double basketCapacity) {
        this.basketCapacity = basketCapacity;
    }
}
