package src.Vehicle;

public class Bike extends Vehicle {
    private Double fuelStatus;

    public Double getFuelStatus() {
        return fuelStatus;
    }

    public void setFuelStatus(Double fuelStatus) {
        this.fuelStatus = fuelStatus;
    }
}
