package src.Vehicle;

public class Moped extends Vehicle {
    private Double batteryPercentage;

    public Double getBatteryPercentage() {
        return batteryPercentage;
    }

    public void setBatteryPercentage(Double batteryPercentage) {
        this.batteryPercentage = batteryPercentage;
    }
}
