package src;

// Import necessary packages and classes
import java.util.List;

import src.User.User;

// Define the package for Wallet class
public class Wallet {
    // Public instance variable
    public String id;

    // Private instance variables
    private User walletUser;
    private double walletBalance;
    private List<Transaction> walletTransactions;

    // Getter methods
    public String getwalletId() {
        return id;
    }

    public double getWalletBalance() {
        return walletBalance;
    }

    public List<Transaction> getWalletTransactions() {
        return walletTransactions;
    }

    public User getWalletUser() {
        // Implement getWalletUser logic here or return null if User class is not
        // defined
        return walletUser;
    }

    // Setter methods

    public void setWalletId(String id) {
        this.id = id;
    }

    public void setWalletBalance(double walletBalance) {
        this.walletBalance = walletBalance;
    }

    public void setWalletTransactions(List<Transaction> walletTransactions) {
        this.walletTransactions = walletTransactions;
    }

    public void setWalletUser(User walletUser) {
        // Implement setWalletUser logic here or ignore if User class is not defined
    }

    /**
     * The function updateWallet is a Java method that is expected to update the
     * wallet and return a
     * boolean value indicating the success of the update.
     * 
     * @return The method is returning a boolean value, specifically false.
     */
    public boolean updateWallet() {
        // Implement updateWallet logic here
        return false; // Replace with actual logic
    }

    /**
     * The function addMoney is a placeholder that returns false and needs to be
     * implemented with the actual logic.
     * 
     * @return The method is returning a boolean value, specifically false.
     */
    public boolean addMoney() {
        // Implement addMoney logic here
        return false; // Replace with actual logic
    }

    /**
     * The function deductMoney is a placeholder that returns false and needs to be
     * implemented with the actual logic.
     * 
     * @return The method is returning a boolean value, specifically false.
     */
    public boolean deductMoney() {
        // Implement deductMoney logic here
        return false; // Replace with actual logic
    }
}
